--- a/CSS/menu.css
+++ b/CSS/menu.css
@@ -18,6 +18,21 @@ body * {
     height: auto;
 }
 
+
+
+div.tooltip {   
+    position: absolute;           
+    text-align: center;           
+    width: 60px;                  
+    height: 40px;                 
+    padding: 2px;             
+    font: 16px sans-serif;        
+    background: white;   
+    border: 0px;      
+    border-radius: 8px;           
+    pointer-events: none;         
+  }
+
 /*
 Add transition to containers so they can push in and out.
 */
