--- a/CSS/menu.css
+++ b/CSS/menu.css
@@ -8,7 +8,7 @@ body * {
    
 }
 
-p, li, a, table, figcaption {
+p, li, a, table, figcaption, .axisLabel {
     font-family: 'Open Sans', Helvetica, sans-serif;
 }
 
@@ -217,6 +217,13 @@ The content `<div>` is where all your content goes.
 
 svg {
     letter-spacing: initial;
+}
+
+
+.axisLabel {
+    font-family: 'Open Sans', Helvetica, sans-serif;
+    font-size: .8em;
+    padding-top: .1em;
 }
 
 
