--- a/CSS/menu.css
+++ b/CSS/menu.css
@@ -378,6 +378,35 @@ p.subtitle {
     align-content: center;
 }
 
+#spine {
+    display: flex;
+    justify-content: space-around;
+    padding: 1em 2em;
+    border-top: 2px #777879 solid;
+    border-bottom: 2px #777879 solid;
+    line-height: 1.5em;
+    font-size: .95em;
+    text-align: center;
+}
+
+.buttonspine {
+    display: flex;
+    background-color: #053961;
+    border: none;
+    color: white;
+    text-align: center;
+    width: 10em;
+    height: 5em;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.buttonspine:hover{
+
+    background-color: #428ff4;
+}
+
 /* additional menu styling*/
 
 a.sublink {
