--- a/CSS/menu.css
+++ b/CSS/menu.css
@@ -378,7 +378,7 @@ p.subtitle {
     align-content: center;
 }
 
-#spine {
+.spine {
     display: flex;
     justify-content: space-around;
     padding: 1em 2em;
